# NeuroTrack

./: README.md  READMEmd
desktop-app/: controller.py  icons.py  main_app.py  main_app.spec  model.py  view.py
firmware-pico/: CMakeLists.txt  dig.json  sketch.cpp
